Fix padding-top in universal-wrapper
Prevents overlap of text with navbar.

--- a/static/css/hugo-academic.css
+++ b/static/css/hugo-academic.css
@@ -187,6 +187,7 @@ blockquote p:last-child {
 
 .universal-wrapper {
   margin: 0 auto;
+  padding-top: 150px;
   padding-right: 15px;
   padding-left: 15px;
   width: 100%;
